--- a/src/components/Chat/Chat.css
+++ b/src/components/Chat/Chat.css
@@ -1,5 +1,8 @@
 .chat{
     flex:2;
+    display: flex;
+    flex-direction: column;
+    /* gap:10px; */
     border-left: 1px solid #dddddd35;
     border-right: 1px solid #dddddd35;
 }
@@ -32,12 +35,12 @@
     }
 }
 .bottom-compo{
+    padding:10px 10px 15px 10px;
     display:flex;
     align-items: center;
-    padding:18px;
     gap:25px;
     input{
-        flex:1;
+        width:377px;
         height:40px;
         padding:15px;
         font-size: 15px;
@@ -67,12 +70,46 @@
 .bottom{
     border-top:1px solid #dddddd35;
     position: relative;
-    top:580px;
-    z-index: 0;
+    /* flex:1; */
 }
 .emoji{
    position: absolute;
    right: 0px;
     top: 205px;
     
+}
+.center{
+    padding-bottom:30px;
+    padding-top: 5px;
+    padding-right:20px;
+    display: flex;
+    gap:30px;
+    flex-direction: column;
+    overflow-y: scroll;
+    scrollbar-width: none;
+    .other-message{
+        padding:25px 15px 25px 10px;
+        p{
+            border-radius: 20px;
+            padding:20px;
+            background-color: #dddddd35;
+        }
+        display: flex;
+        gap:10px;
+        /* justify-self: flex-start; */
+        width:500px;
+        img{
+            border-radius: 50px;
+            height:40px;
+            width:40px;
+        }
+    }
+    .own-message{
+        border-radius: 20px;
+       padding:20px;
+        display: flex;
+        align-self: flex-end;
+        width:500px;
+        background-color: #dddddd35;
+    }
 }
