--- a/src/components/Details/Details.css
+++ b/src/components/Details/Details.css
@@ -1,3 +1,110 @@
 .details{
     flex:1;
 }
+.details-profile{
+    padding:20px;
+    display: flex;
+    flex-direction: column;
+    gap:20px;
+    justify-content: center;
+    align-items: center;
+    img{
+        width:80px;
+        height:80px;
+        border-radius:50px;
+    }
+    border-bottom: 1px solid #dddddd35;
+}
+.settings{
+    padding:20px;
+    display:flex;
+    flex-direction: column;
+    gap:20px;
+    .chat-setting{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        img{
+            padding:9px;
+            background-color: #dddddd35;
+            height:30px;
+            width:30px;
+            border-radius: 20px;
+        }
+    }
+    .privacy-help{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        img{
+            padding:9px;
+            background-color: #dddddd35;
+            height:30px;
+            width:30px;
+            border-radius: 20px;
+        }
+    }
+    .shared-photos{
+    .shared{
+        display:flex;
+        justify-content:space-between;
+        align-items:center;
+        img{
+            padding:8px;
+            border-radius:50px;
+            background-color:#dddddd35;
+            height:30px;
+            width:30px;
+        }
+    }
+    .photos{
+        display: flex;
+        flex-direction: column;
+        gap:5px;
+        .photo-number{
+            .image{
+                display:flex;
+                gap:5px;
+                align-items: center;
+            }
+            display:flex;
+            padding:6px;
+            align-items:center;
+            justify-content: space-between;
+            .logo-img{
+                height:20px;
+                width:20px;
+                padding: 4px;
+                background-color: #dddddd35;
+    
+            }
+        }
+    }
+}
+.Shared-files{
+    display: flex;
+        align-items: center;
+        justify-content: space-between;
+        img{
+            padding:9px;
+            background-color: #dddddd35;
+            height:30px;
+            width:30px;
+            border-radius: 20px;
+        }
+}
+.block{
+    .block-button{
+        width:300px;
+        height:30px;
+        border-radius: 40px;
+        outline:none;
+        border:2px solid #dddddd35;
+        cursor: pointer;
+    }
+    .block-button:hover{
+        background-color: rgb(147, 41, 41);
+        color:white;
+    }
+}
+}
