--- a/src/components/Details/Details.css
+++ b/src/components/Details/Details.css
@@ -96,15 +96,32 @@
 .block{
     .block-button{
         width:300px;
-        height:30px;
+        height:40px;
+        border-radius: 40px;
+        outline:none;
+        border:2px solid #dddddd35;
+        cursor: pointer;
+        background-color: rgb(147, 41, 41);
+        transition: transform 0.1s;
+    }
+    .block-button:hover{
+        background-color: rgb(147, 41, 41);
+        color:white;
+        transform:scale(1.06)
+    }
+}
+.logout{
+    .logout-button{
+        width:300px;
+        height:40px;
         border-radius: 40px;
         outline:none;
         border:2px solid #dddddd35;
         cursor: pointer;
     }
-    .block-button:hover{
-        background-color: rgb(147, 41, 41);
-        color:white;
+    .logout-button:hover{
+        background-color: rgb(59, 59, 126);
+        color:rgb(249, 247, 247);
     }
 }
 }
